--- a/kafkaproducer/src/main/resources/application.properties
+++ b/kafkaproducer/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.cloud.stream.kafka.binder.brokers=localhost:9092
 
+
+
+
+# Outgoing events
+spring.cloud.stream.bindings.personErfasstOut.destination=PersonEfasstTopic
+spring.cloud.stream.bindings.personErfasstOut.contentType=application/json
