--- a/kafkaproducer/src/main/resources/application.properties
+++ b/kafkaproducer/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.main.web-application-type=none
 # Outgoing events
 spring.cloud.stream.bindings.personErfasstOut.destination=PersonEfasstTopic
 spring.cloud.stream.bindings.personErfasstOut.contentType=application/json
+
+# Incoming
+spring.cloud.stream.bindings.scoringRequestIn.destination=CreditServicesScoringRequestTopic
+spring.cloud.stream.bindings.scoringRequestIn.group=ApplicationProcess-ScoringRequestEntered-Group
+spring.cloud.stream.bindings.scoringRequestIn.contentType=application/json
