--- a/kreditantragservice/src/main/resources/application.properties
+++ b/kreditantragservice/src/main/resources/application.properties
@@ -1,1 +1,29 @@
+spring.cloud.stream.kafka.binder.brokers=localhost:9092
 
+
+# Outgoing events
+spring.cloud.stream.bindings.kreditAntragErfasstOut.destination=KreditAntragErfasstTopic
+spring.cloud.stream.bindings.kreditAntragErfasstOut.contentType=application/json
+
+spring.cloud.stream.bindings.kreditAntragPositivOut.destination=KreditAntragPositivTopic
+spring.cloud.stream.bindings.kreditAntragPositivOut.contentType=application/json
+
+spring.cloud.stream.bindings.kreditAntragNegativOut.destination=KreditAntragNegativTopic
+spring.cloud.stream.bindings.kreditAntragNegativOut.contentType=application/json
+
+# Incoming
+spring.cloud.stream.bindings.scoringPositivIn.destination=CreditServicesScoringPositivTopic
+spring.cloud.stream.bindings.scoringPositivIn.group=KreditAntrag-ScoringPositivEntered-Group
+spring.cloud.stream.bindings.scoringPositivIn.contentType=application/json
+
+spring.cloud.stream.bindings.scoringNegativIn.destination=CreditServicesScoringNegativTopic
+spring.cloud.stream.bindings.scoringNegativIn.group=KreditAntrag-ScoringNegativEntered-Group
+spring.cloud.stream.bindings.scoringNegativIn.contentType=application/json
+
+spring.cloud.stream.bindings.cityScoringPositivIn.destination=CreditServicesCityScoringPositivTopic
+spring.cloud.stream.bindings.cityScoringPositivIn.group=KreditAntrag-CityScoringPositivEntered-Group
+spring.cloud.stream.bindings.cityScoringPositivIn.contentType=application/json
+
+spring.cloud.stream.bindings.cityScoringNegativIn.destination=CreditServicesCityScoringNegativTopic
+spring.cloud.stream.bindings.cityScoringNegativIn.group=KreditAntrag-CityScoringNegativEntered-Group
+spring.cloud.stream.bindings.cityScoringNegativIn.contentType=application/json
