--- a/kreditantragservice/src/main/resources/application.properties
+++ b/kreditantragservice/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+spring.profiles.active=h2 
+
+logging.level.root=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=ERROR
+
+
 spring.cloud.stream.kafka.binder.brokers=localhost:9092
 
 
